<resources>
    <string name="app_name">Capstone</string>
    <string name="date_label">Date:</string>
    <string name="comment_label">Comments</string>
    <string name="add_comment_btn_label">Add comment</string>
    <string name="new_comment_label">New Comment</string>
    <string name="write_a_comment_placeholder">Write a comment</string>
    <string name="or_label">OR</string>
    <string name="save_comment_btn_label">Save Comment</string>
    <string name="email_label">Email</string>
    <string name="enter_your_email_placeholder">Enter your email</string>
    <string name="password_label">Password</string>
    <string name="enter_your_password_placeholder">Enter your password</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="login_btn_label">Login</string>
    <string name="don_t_have_an_account_label">Don\'t have an account?</string>
    <string name="sign_up_txt_label">Sign up</string>
    <string name="register_name_label">Name</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="already_have_an_account_label">Already have an account?</string>
    <string name="login_label">Login</string>
    <string name="memories_collection_label">Memories Collection</string>
    <string name="one_memory_label">One Memory</string>
    <string name="image_memory_imgView_label">Image</string>
    <string name="video_memory_imgView_label">Video</string>
    <string name="voice_note_memory_imgView_label">Voice Note</string>
    <string name="upload_image_video_label">Upload Image/Video</string>
    <string name="memory_title_label">Memory Title</string>
    <string name="when_was_this_memory_label">When Was This Memory</string>
    <string name="write_a_comment_label">Write A Comment?</string>
    <string name="where_was_it_label">Where Was It</string>
    <string name="collection_name_label">Collection Name</string>
    <string name="collection_name_empty_snackBar_msg">Category name cannot be empty.</string>
    <string name="snackBar_dismiss_label">Dismiss</string>
    <string name="init_timer">00:00</string>
    <string name="unsuccessfulMessage">Something went wrong, please try again later :)</string>
    <string name="password_rules">&#8226; Password minimum length 8. \n&#8226; Has one uppercase. \n&#8226; Has numbers. \n&#8226; One special character(@#$%^&amp;+=!).</string>
</resources>