<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.feature_new_memory.memoryMediaFragment.MemoryMediaFragment">

    <ImageView
        android:id="@+id/imageMemoryImgView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:padding="10sp"
        android:scaleType="fitCenter"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/videoMemoryImgView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/single_memory_box_corner_radius" />

    <ImageView
        android:id="@+id/videoMemoryImgView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:padding="10sp"
        android:scaleType="fitCenter"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/single_memory_box_corner_radius" />

    <ImageView
        android:id="@+id/voiceNoteMemoryImgView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:padding="10sp"
        android:scaleType="fitCenter"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoMemoryImgView"
        app:srcCompat="@drawable/single_memory_box_corner_radius" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_memory_imgView_label"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageMemoryImgView"
        app:layout_constraintEnd_toEndOf="@+id/imageMemoryImgView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imageMemoryImgView"
        app:layout_constraintTop_toTopOf="@+id/imageMemoryImgView"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_memory_imgView_label"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/videoMemoryImgView"
        app:layout_constraintEnd_toEndOf="@+id/videoMemoryImgView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/videoMemoryImgView"
        app:layout_constraintTop_toTopOf="@+id/videoMemoryImgView"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voice_note_memory_imgView_label"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/voiceNoteMemoryImgView"
        app:layout_constraintEnd_toEndOf="@+id/voiceNoteMemoryImgView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/voiceNoteMemoryImgView"
        app:layout_constraintTop_toTopOf="@+id/voiceNoteMemoryImgView"
        app:layout_constraintVertical_bias="0.505" />

</androidx.constraintlayout.widget.ConstraintLayout>