<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.feature_new_memory.newImageVideoMemoryFragment.NewImageVideoMemoryFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/previousBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"

        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"

        app:backgroundTint="#CACAC9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/previous_btn_style"
        tools:ignore="RtlHardcoded,SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"

        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_baseline_arrow_forward_ios_24"

        app:backgroundTint="#CACAC9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/next_btn_style"
        tools:ignore="RtlHardcoded,SpeakableTextPresentCheck" />

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/uploadMemoryImgView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="60dp"
                android:padding="10sp"
                android:scaleType="fitCenter"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/single_memory_box_corner_radius" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_image_video_label"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/uploadMemoryImgView"
                app:layout_constraintEnd_toEndOf="@+id/uploadMemoryImgView"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="@+id/uploadMemoryImgView"
                app:layout_constraintTop_toTopOf="@+id/uploadMemoryImgView"
                app:layout_constraintVertical_bias="0.505" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/memoryDetailTitleAndDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/previewImageMemoryImgView"
                android:layout_width="250dp"
                android:layout_height="320dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:padding="10sp"
                android:scaleType="fitCenter"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/single_memory_box_corner_radius" />


            <ViewFlipper
                android:id="@+id/nestedFlipper"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/previewImageMemoryImgView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/memory_title_label"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/memoryNameTxtInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:ems="10"
                        android:minHeight="48dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/when_was_this_memory_label"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/memoryNameTxtInput" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/memoryDateTxtInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"

                        android:ems="10"
                        android:minHeight="48dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView10">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/write_a_comment_label"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/memoryCommentTxtInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:ems="10"
                        android:minHeight="48dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView11">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="OR"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/memoryCommentTxtInput" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="match_parent"
                        android:layout_height="50sp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="25dp"
                        android:background="@drawable/memory_card_corner_radius"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView14" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView29"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/where_was_it_label"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/memoryLocationBtn"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="40dp"
                        android:background="@drawable/memory_card_corner_radius"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView29"
                        tools:src="@drawable/ic_google_maps_pin_30x30">

                    </ImageButton>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ViewFlipper>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ViewFlipper>
</androidx.constraintlayout.widget.ConstraintLayout>